--- a/views/article.pug
+++ b/views/article.pug
@@ -5,3 +5,5 @@ block content
   h5 Written by #{article.author}
   br
   p= article.body
+  hr
+  a.btn.btn-primary(href="/article/edit/"+article._id) Edit
