--- a/views/article.pug
+++ b/views/article.pug
@@ -7,3 +7,6 @@ block content
   p= article.body
   hr
   a.btn.btn-primary(href="/article/edit/"+article._id) Edit
+  br
+  br
+  a.btn.btn-danger.delete-article(href="#", data-id=article._id) Delete
