--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,6 +15,11 @@ html
             a.nav-link(href='/') Home 
           li.nav-item
             a.nav-link(href='/articles/add') Add Article
+        ul.nav.navbar-nav.navbar-right
+          li.nav-item
+            a.nav-link(href='users/register') Register
+          li.nav-item
+            a.nav-link(href='/users/login') Login
     br
     .container
       != messages("message", locals)
