--- a/views/article.pug
+++ b/views/article.pug
@@ -2,11 +2,11 @@ extends layout
 
 block content
   h1= article.title
-  h5 Written by #{article.author}
+  h5 Written by #{author}
   br
   p= article.body
   hr
-  a.btn.btn-primary(href="/articles/edit/"+article._id) Edit
-  br
-  br
-  a.btn.btn-danger.delete-article(href="#", data-id=article._id) Delete
+  if user
+    if user.id ==article.author
+      a.btn.btn-primary(href="/articles/edit/"+article._id, style={"margin-right": "1em"}) Edit
+      a.btn.btn-danger.delete-article(href="#", data-id=article._id) Delete
