--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,15 +13,16 @@ html
         ul.navbar-nav.mr-auto
           li.nav-item
             a.nav-link(href='/') Home 
-          li.nav-item
-            a.nav-link(href='/articles/add') Add Article
+          if user
+            li.nav-item
+              a.nav-link(href='/articles/add') Add Article
         ul.nav.navbar-nav.navbar-right
           if user
             li.nav-item
-              a.nav-link(href='users/logout') Logout
+              a.nav-link(href='/users/logout') Logout
           else
             li.nav-item
-              a.nav-link(href='users/register') Register
+              a.nav-link(href='/users/register') Register
             li.nav-item
               a.nav-link(href='/users/login') Login
     br
