--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,12 +1,12 @@
 doctype html
 html
   head
-    title KnowledgeBase
+    title Bibly
     link(rel="stylesheet", href="/bower_components/bootstrap/dist/css/bootstrap.css")
     link(rel="stylesheet", href="/css/style.css")
   body
     nav.navbar.navbar-expand-md.navbar-dark.bg-dark
-      a.navbar-brand(href='/') KnowledgeBase
+      a.navbar-brand(href='/') Bibly
       button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarsExampleDefault' aria-controls='navbarsExampleDefault' aria-expanded='false' aria-label='Toggle navigation')
         span.navbar-toggler-icon
       #navbarsExampleDefault.collapse.navbar-collapse
